# amp-stories

./: .gitignore  CLAUDE.md  LICENSE  README.md  WEB_STORY_STYLE_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml
amp_stories/: __init__.py  _html.py  _serde.py  _types.py  _validation.py  attachment.py  auto_ads.py  bookend.py  consent.py  elements.py  helpers.py  interactive.py  layer.py  outlink.py  page.py  shopping.py  story.py  templates.py  themes.py
examples/: basic_story.py  breaking_news.py  ca_backpacking.py  shopping_story.py  trip_summary.py
examples/output/: basic_story.html  breaking_news.html  shopping_story.html  trip_summary.html
src/amp_stories/: __init__.py  animation.py  attachment.py  bookend.py  layer.py  outlink.py  page.py
tests/: conftest.py  test_animation.py  test_attachment.py  test_auto_ads.py  test_bookend.py  test_consent.py  test_elements.py  test_helpers.py  test_html.py  test_interactive.py  test_layer.py  test_live_story.py  test_outlink.py  test_page.py  test_serde.py  test_shopping.py  test_story.py  test_templates.py  test_themes.py  test_validation.py
